2007-07-26  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/patterns/Latn.hearing-impaired.conf:
	* data/patterns/Latn.hearing-impaired.in:
	Add a rule and finetune patterns.
	Use full names instead of letters for flags.

	* gaupol/agents/text.py (remove_hearing_impaired):
	New method to remove hearing impaired parts from subtitles.

	* gaupol/finder.py (set_regex):
	Add a "default_flags" keyword argument.

	* gaupol/pattern.py (get_flags):
	New method to get evaluated flags.

2007-07-24  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/patterns:
	* data/patterns/Latn.hearing-impaired.conf:
	* data/patterns/Latn.hearing-impaired.in:
	New files to define hearing impaired patterns for Latin.

	* gaupol/__init__.py:
	Import Pattern and PatternManager.

	* gaupol/locales.py (get_system_code):
	New function to get locale from environment variables.

	* gaupol/patternman.py:
	* gaupol/pattern.py:
	New files with classes Pattern and PatternManager.

	* setup.py:
	Translate pattern files.

	* tools/translate:
	Extract translatable strings from pattern files.

2007-07-23  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/scripts.py:
	Rewrite to be consistent with gaupol.countries, gaupol.languages,
	gaupol.locales and gaupol.encodings.

2007-07-22  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/codes/iso_3166.xml:
	* data/codes/iso_639.xml:
	* data/codes/locales.txt:
	* gaupol/countries.py:
	* gaupol/languages.py:
	* gaupol/locales.py:
	Split languages to three modules.
	Read codes from files in gaupol.DATA_DIR.
	Rename functions to be less ambiguous.

	* gaupol/encodings.py:
	Rename functions to be less ambiguous.

2007-07-17  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/ruler.py:
	Rename lengthlib_handler_id to ruler_handler_id.

2007-07-16  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/conf/configobj.py (ConfigObj._quote):
	Quote strings containing "#".

2007-07-09  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* doc/RELEASING:
	Fix all remaining errors.
